<resources>
    <string name="app_name">Tips</string>
    <string name="action_settings">Настройки</string>
    <string name="action_cards">Карты</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tips">Чаевые:</string>
    <string name="order_amount">Сумма заказа:</string>
    <string name="waiter">Официант №</string>
    <string name="pay_with_tp_text">Оплатить, включая чаевые</string>
    <string name="pay">Оплатить</string>
    <string name="name">Имя</string>
    <string name="card_number_hint">0000 0000 0000 0000</string>
    <string name="card_issuer_hint">CARD ISSUER</string>
    <string name="card_date_hint">**/**</string>
    <string name="card_cvv_hint">***</string>
    <string name="password_tip">1234 :)</string>
    <string name="password_hint">****</string>
    <string name="enter">Войти</string>
    <string name="save_card">Сохранить карту</string>
    <string name="scan">Сканировать QR-код</string>
</resources>
