<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardContent"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/cardNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:hint="@string/card_number_hint"
        android:inputType="number"
        android:lines="1"
        android:maxLength="19"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cardHolderEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:hint="@string/card_issuer_hint"
        android:inputType="textCapCharacters"
        android:lines="1"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberEditText" />

    <EditText
        android:id="@+id/cardDateEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:hint="@string/card_date_hint"
        android:inputType="number"
        android:lines="1"
        android:maxLength="5"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardHolderEditText"
        app:layout_constraintVertical_bias="0.555"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/cardCvEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:hint="@string/card_cvv_hint"
        android:inputType="numberPassword"
        android:lines="1"
        android:maxLength="3"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toEndOf="@+id/cardDateEditText"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberEditText" />

</android.support.constraint.ConstraintLayout>